Update: added font family

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5,10 +5,20 @@
 *,
 html,
 body {
-  font-family: "Inter var";
+  font-family: "Gotham";
   /* outline: 1px solid red; */
 }
 
 @tailwind base;
+@font-face {
+  font-family: Gotham;
+  src: url(/GothamPro-Medium.woff) format("woff");
+}
+
+@font-face {
+  font-family: Gotham;
+  font-weight:500;
+  src: url(/GothamPro-Light.woff) format("woff");
+}
 @tailwind components;
 @tailwind utilities;
