--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 *,
 html,
 body {
-  font-family: "Inter var";
+  font-family: "Gotham";
   /* outline: 1px solid red; */
 }
 
@@ -587,6 +587,20 @@ img,
 video {
   max-width: 100%;
   height: auto;
+}
+
+@font-face {
+  font-family: Gotham;
+
+  src: url(/GothamPro-Medium.woff) format("woff");
+}
+
+@font-face {
+  font-family: Gotham;
+
+  font-weight:500;
+
+  src: url(/GothamPro-Light.woff) format("woff");
 }
 
 .container{
